--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,16 @@
-
+<html>
+  <head>
+    <title>Test page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+      <h1>This is a test</h1>
+      <button class="btn btn-primary"><i class="fas fa-search"></i> Press Me!!</button>
+      <div class="well">
+        Hello World
+      </div>
+    </div>
+  </body>
+</html>
